...
              color:
                  MediaQuery.of(context).platformBrightness == Brightness.light
                      ? black
                      : Colors.white,
            ),
          ),
          key: const Key("editPageTitle"),
        ),
        iconTheme: IconThemeData(
          color: MediaQuery.of(context).platformBrightness == Brightness.light
              ? darkBlue
              : Colors.white,
        ),
...
                ),
                style: GoogleFonts.nunito(),
              ),
            ),
            Center(
              child: Text(
                "Utilisateurs ajoutés",
                style: GoogleFonts.nunito(
                  textStyle: const TextStyle(
                    fontSize: 16,
                    fontWeight: FontWeight.bold,
                  ),
                ),
...
                              padding: const EdgeInsets.all(15),
                              child: Text(
                                user.email,
                                style: const TextStyle(
                                  color: Colors.white,
                                ),
                                key: const Key("userToAddCard"),
                              ),
                            ),
                          ),
                        ),
                        onTap: () {
                          setState(() {
...
                  shrinkWrap: true,
                ),
              ),
            ),
            Center(
              child: Text(
                "Utilisateurs non ajoutés",
                style: GoogleFonts.nunito(
                  textStyle: const TextStyle(
                    fontSize: 16,
                    fontWeight: FontWeight.bold,
                  ),
                ),
...
                                    padding: const EdgeInsets.all(15),
                                    child: Text(
                                      user.email,
                                      style: const TextStyle(
                                        color: Colors.white,
                                      ),
                                      key: const Key("userNotAddedCard"),
                                    ),
                                  ),
                                ),
                              ),
                              onTap: () {
                                setState(() {
...
                              usersToAdd,
                              widget.chat.chatId,
                            ),
                          );
                        }
                      },
                      key: const Key("validateEditButton"),
                    ),
                  ),
                  Expanded(
                    child: GestureDetector(
                      child: Padding(
                        padding: const EdgeInsets.all(15),
...
                        BlocProvider.of<EditChatBloc>(context).add(
                          EditChatDeleteEvent(
                            widget.chat.chatId,
                          ),
                        );
                      },
                      key: const Key("deleteChatButton"),
                    ),
                  ),
                ],
              ),
            ),
          ],
...
