...
                children: [
                  Form(
                    child: Column(
                      children: [
                        TextFormField(
                          textInputAction: TextInputAction.next,
                          key: const Key("emailRegisterField"),
                          controller: emailController,
                          style: GoogleFonts.nunito(),
                          decoration: InputDecoration(
                            hintText: 'Email',
                            hintStyle: heading6.copyWith(color: grey),
                            border: const OutlineInputBorder(
...
                          autofillHints: const [AutofillHints.telephoneNumber],
                        ),
                        const SizedBox(
                          height: 32,
                        ),
                        TextFormField(
                          key: const Key("passwordRegisterField"),
                          controller: passwordController,
                          obscureText: !passwordVisible,
                          style: GoogleFonts.nunito(),
                          decoration: InputDecoration(
                            hintText: 'Mot de passe',
                            hintStyle: heading6.copyWith(color: grey),
...
                    height: 32,
                  ),
                  const SizedBox(
                    height: 32,
                  ),
                  GestureDetector(
                    key: const Key("registerButton"),
                    onTap: () {
                      BlocProvider.of<RegisterBloc>(context).add(
                        RegisterClickOnRegisterEvent(
                          emailController.text,
                          passwordController.text,
                          firstnameController.text,
...
                          textStyle: TextStyle(
                            color: blue,
                          ),
                        ),
                      ),
                    ),
                    key: const Key("toLoginButton"),
                  ),
                ],
              ),
            ),
          ),
        ),
...
